# wargroove_lethal_simulator

./: README.md  combat_simulator_example.py  pyproject.toml
wargroove_lethal_simulator/: __init__.py  attack_sequence.py  calc.py  combat_simulator.py  combat_simulator_example.py  db.py  form.py
wargroove_lethal_simulator/src/: __init__.py  attack_sequence.py  combat_simulator.py
wargroove_lethal_simulator/src/game/: board.py
wargroove_lethal_simulator/src/unit/: unit.py  unitdata.py
wargroove_lethal_simulator/templates/: base.html  calc.html
wargroove_lethal_simulator/unit/: __init__.py  unit.py  unitdata.py
wargroove_lethal_simulator/utils/: __init__.py  index.py
