[tool.poetry]
name = "wargroove_lethal_simulator"
version = "0.1.0"
description = "Calculate exact lethal probability for any combat sequence using simulation"
authors = ["Zeronix-Git <zerolyferr@gmail.com>"]
packages = [
    {include = "wargroove_lethal_simulator"}   
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
